--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
         }
     ],
     "require": {
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "php": "7.2.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/Classes/"
+            "App\\": "app/Classes/"
         }
     }
 }
